<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/resetGameBtn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/play_reset_button"
                android:layout_marginTop="15dp"
                android:layout_weight="1.1"
                android:text="@string/reset" />

            <TextView
                android:id="@+id/matchCounter"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1.1"
                android:gravity="center"
                android:text="@string/startGameScore"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/timerView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/timerImage"
                    android:scaleType="fitEnd"
                    android:src="@drawable/ic_timer" />

                <Chronometer
                    android:id="@+id/chronometer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:gravity="start|center"
                    android:paddingStart="8dp"
                    android:paddingEnd="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <GridLayout
            android:id="@+id/imageGrid"
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:layout_marginTop="0dp"
            android:columnCount="3"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingTop="35dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:rowCount="4">

            <GridView
                android:id="@+id/gameGridView"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:columnWidth="100dp"
                android:fadeScrollbars="true"
                android:gravity="center"
                android:horizontalSpacing="0dip"
                android:numColumns="3"
                android:scrollbars="none"
                android:verticalSpacing="0dip" />


        </GridLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>